--- a/package/batocera/emulationstation/batocera-es-system/locales/batocera-es-system.pot
+++ b/package/batocera/emulationstation/batocera-es-system/locales/batocera-es-system.pot
@@ -600,7 +600,7 @@ msgctxt "game_options"
 msgid "DISPLAY ROTATION"
 msgstr ""
 
-#. TRANSLATION: libretro/mesen, melonds
+#. TRANSLATION: libretro/mesen, daphne, melonds
 msgctxt "game_options"
 msgid "90 degrees"
 msgstr ""
@@ -610,7 +610,7 @@ msgctxt "game_options"
 msgid "180 degrees"
 msgstr ""
 
-#. TRANSLATION: libretro/mesen, melonds
+#. TRANSLATION: libretro/mesen, daphne, melonds
 msgctxt "game_options"
 msgid "270 degrees"
 msgstr ""
@@ -2294,7 +2294,7 @@ msgctxt "game_options"
 msgid "ALT DPAD MODE"
 msgstr ""
 
-#. TRANSLATION: libretro/mame, libretro/mess, libretro/mamevirtual, libretro/mamevirtual, cemu, ...
+#. TRANSLATION: libretro/mame, libretro/mess, libretro/mess, libretro/mamevirtual, libretro/mamevirtual, ...
 msgctxt "game_options"
 msgid "Off (Default)"
 msgstr ""
@@ -2434,6 +2434,61 @@ msgctxt "game_options"
 msgid "APF M-1000 cartridges"
 msgstr ""
 
+#. TRANSLATION: libretro/mess, libretro/mess, mame/wasm4, mame/wasm4
+msgctxt "game_options"
+msgid "Apple II cleanly cracked disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, libretro/mess, mame/wasm4, mame/wasm4
+msgctxt "game_options"
+msgid "Apple II miscellaneous disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, libretro/mess, mame/wasm4, mame/wasm4
+msgctxt "game_options"
+msgid "Apple II original disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, libretro/mess, libretro/mess, libretro/mess, libretro/mess, ...
+msgctxt "game_options"
+msgid "Cassette"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Apple IIgs cleanly cracked disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Apple IIgs miscellaneous disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Apple IIgs original disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "5 1/4 Disk (Drive 1)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "5 1/4 Disk (Drive 2)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "3 1/2 Disk (Drive 3)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "3 1/2 Disk (Drive 4)"
+msgstr ""
+
 #. TRANSLATION: libretro/mess, mame/wasm4
 msgctxt "game_options"
 msgid "Emerson Arcadia 2001 cartridges"
@@ -2454,7 +2509,7 @@ msgctxt "game_options"
 msgid "Acorn Archimedes ROM images"
 msgstr ""
 
-#. TRANSLATION: libretro/mess, libretro/mess, mame/wasm4, mame/wasm4
+#. TRANSLATION: libretro/mess, libretro/mess, libretro/mess, libretro/mess, mame/wasm4, ...
 msgctxt "game_options"
 msgid "Select model to emulate"
 msgstr ""
@@ -2506,17 +2561,37 @@ msgstr ""
 
 #. TRANSLATION: libretro/mess, libretro/mess, libretro/mess, libretro/mess, libretro/mess, ...
 msgctxt "game_options"
-msgid "Cassette"
-msgstr ""
-
-#. TRANSLATION: libretro/mess, libretro/mess, libretro/mess, libretro/mess, libretro/mess, ...
-msgctxt "game_options"
 msgid "Cartridge"
 msgstr ""
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess, mame/wasm4, mame/wasm4
 msgctxt "game_options"
 msgid "Quickload"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC MODEL"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro Model B (Default)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Master 128"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Master 512"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Master Compact"
 msgstr ""
 
 #. TRANSLATION: libretro/mess, mame/wasm4
@@ -2544,27 +2619,72 @@ msgctxt "game_options"
 msgid "Acorn BBC Micro Model B Original disks"
 msgstr ""
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess
 msgctxt "game_options"
-msgid "ROM (Slot 1)"
+msgid "Acorn BBC Master cartridges"
 msgstr ""
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess
 msgctxt "game_options"
-msgid "ROM (Slot 2)"
+msgid "Acorn BBC Master disks"
 msgstr ""
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess
 msgctxt "game_options"
-msgid "ROM (Slot 3)"
+msgid "Acorn BBC Master Compact disks"
 msgstr ""
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess
 msgctxt "game_options"
-msgid "ROM (Slot 4)"
+msgid "Olivetti Prodest PC 128S disks (BBC Master Compact)"
 msgstr ""
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro/Master Cassette"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro/Master ROM (Slot 1)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro ROM (Slot 2)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro ROM (Slot 3)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro ROM (Slot 4)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro/Master Disk (Drive 1)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro/Master Disk (Drive 2)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Master Cartridge (Slot 1)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Master Cartridge (Slot 2)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, libretro/mess, mame/wasm4, mame/wasm4
 msgctxt "game_options"
 msgid "CUSTOM CONFIG"
 msgstr ""
@@ -2702,6 +2822,78 @@ msgstr ""
 #. TRANSLATION: libretro/mess, mame/wasm4
 msgctxt "game_options"
 msgid "FM-7 MODEL"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "FM TOWNS MODEL"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "FM Towns Marty (Default)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "FM Towns (Model 1/2)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "FM Towns II UX"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid ""
+"Insert a disk into the floppy drive, a blank will be used if one doesn't "
+"exist"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "ADD USER DISK"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Fujitsu FM Towns CD-ROMs"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Fujitsu FM Towns cracked floppy disk images"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Fujitsu FM Towns miscellaneous floppy disk images"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Fujitsu FM Towns original floppy disk images"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Floppy Disk (Drive 1)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Floppy Disk (Drive 2 - Model 1/2 & II UX)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "CD-ROM"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Hard Drive (II UX)"
 msgstr ""
 
 #. TRANSLATION: libretro/mess, mame/wasm4
@@ -5814,6 +6006,16 @@ msgstr ""
 
 #. TRANSLATION: daphne
 msgctxt "game_options"
+msgid "Choose your graphics rendering"
+msgstr ""
+
+#. TRANSLATION: daphne
+msgctxt "game_options"
+msgid "GRAPHICS BACKEND"
+msgstr ""
+
+#. TRANSLATION: daphne
+msgctxt "game_options"
 msgid "Not all games support Stretch, depending on the video files."
 msgstr ""
 
@@ -5827,14 +6029,24 @@ msgctxt "game_options"
 msgid "Stretch"
 msgstr ""
 
-#. TRANSLATION: daphne
+#. TRANSLATION: daphne, dolphin, dolphin_triforce
 msgctxt "game_options"
-msgid "Choose your graphics rendering"
+msgid "Force 4:3"
+msgstr ""
+
+#. TRANSLATION: daphne, melonds
+msgctxt "game_options"
+msgid "Rotate the screen with the emulator."
+msgstr ""
+
+#. TRANSLATION: daphne, melonds
+msgctxt "game_options"
+msgid "SCREEN ROTATION"
 msgstr ""
 
 #. TRANSLATION: daphne
 msgctxt "game_options"
-msgid "GRAPHICS BACKEND"
+msgid "0 degrees"
 msgstr ""
 
 #. TRANSLATION: daphne
@@ -5875,6 +6087,16 @@ msgstr ""
 #. TRANSLATION: daphne
 msgctxt "game_options"
 msgid "INVERT AXIS"
+msgstr ""
+
+#. TRANSLATION: daphne
+msgctxt "game_options"
+msgid "Adjust Singe joystick sensitivity."
+msgstr ""
+
+#. TRANSLATION: daphne
+msgctxt "game_options"
+msgid "JOYSTICK SENSITIVITY"
 msgstr ""
 
 #. TRANSLATION: dolphin/wasm4
@@ -5956,11 +6178,6 @@ msgstr ""
 #. TRANSLATION: dolphin, dolphin_triforce
 msgctxt "game_options"
 msgid "Force 16:9"
-msgstr ""
-
-#. TRANSLATION: dolphin, dolphin_triforce
-msgctxt "game_options"
-msgid "Force 4:3"
 msgstr ""
 
 #. TRANSLATION: dolphin, dolphin_triforce
@@ -6733,16 +6950,6 @@ msgstr ""
 #. TRANSLATION: melonds
 msgctxt "game_options"
 msgid "ENABLE POLYGON SPLITTING"
-msgstr ""
-
-#. TRANSLATION: melonds
-msgctxt "game_options"
-msgid "Rotate the screen with the emulator."
-msgstr ""
-
-#. TRANSLATION: melonds
-msgctxt "game_options"
-msgid "SCREEN ROTATION"
 msgstr ""
 
 #. TRANSLATION: melonds
@@ -7915,6 +8122,36 @@ msgstr ""
 
 #. TRANSLATION: mame/wasm4
 msgctxt "game_options"
+msgid "ROM (Slot 1)"
+msgstr ""
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "ROM (Slot 2)"
+msgstr ""
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "ROM (Slot 3)"
+msgstr ""
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "ROM (Slot 4)"
+msgstr ""
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "Mount a floppy for user data, creates if needed"
+msgstr ""
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "USER DISK"
+msgstr ""
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
 msgid "Mac IIx (2Mb RAM, Color, 2 HD Floppies/CD/HDD, Image Reader)"
 msgstr ""
 
@@ -7926,6 +8163,11 @@ msgstr ""
 #. TRANSLATION: mame/wasm4
 msgctxt "game_options"
 msgid "Disk Image"
+msgstr ""
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "Interton VC 4000 cartridges"
 msgstr ""
 
 #. TRANSLATION: mame/wasm4
