--- a/package/batocera/emulationstation/batocera-es-system/locales/nl/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/nl/batocera-es-system.po
@@ -608,7 +608,7 @@ msgctxt "game_options"
 msgid "DISPLAY ROTATION"
 msgstr ""
 
-#. TRANSLATION: libretro/mesen, melonds
+#. TRANSLATION: libretro/mesen, daphne, melonds
 msgctxt "game_options"
 msgid "90 degrees"
 msgstr ""
@@ -618,7 +618,7 @@ msgctxt "game_options"
 msgid "180 degrees"
 msgstr ""
 
-#. TRANSLATION: libretro/mesen, melonds
+#. TRANSLATION: libretro/mesen, daphne, melonds
 msgctxt "game_options"
 msgid "270 degrees"
 msgstr ""
@@ -2309,7 +2309,7 @@ msgctxt "game_options"
 msgid "ALT DPAD MODE"
 msgstr "ALT DPAD MODUS"
 
-#. TRANSLATION: libretro/mame, libretro/mess, libretro/mamevirtual, libretro/mamevirtual, cemu, ...
+#. TRANSLATION: libretro/mame, libretro/mess, libretro/mess, libretro/mamevirtual, libretro/mamevirtual, ...
 msgctxt "game_options"
 msgid "Off (Default)"
 msgstr "Uit (Standaard)"
@@ -2449,6 +2449,61 @@ msgctxt "game_options"
 msgid "APF M-1000 cartridges"
 msgstr ""
 
+#. TRANSLATION: libretro/mess, libretro/mess, mame/wasm4, mame/wasm4
+msgctxt "game_options"
+msgid "Apple II cleanly cracked disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, libretro/mess, mame/wasm4, mame/wasm4
+msgctxt "game_options"
+msgid "Apple II miscellaneous disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, libretro/mess, mame/wasm4, mame/wasm4
+msgctxt "game_options"
+msgid "Apple II original disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, libretro/mess, libretro/mess, libretro/mess, libretro/mess, ...
+msgctxt "game_options"
+msgid "Cassette"
+msgstr "Cassette"
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Apple IIgs cleanly cracked disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Apple IIgs miscellaneous disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Apple IIgs original disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "5 1/4 Disk (Drive 1)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "5 1/4 Disk (Drive 2)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "3 1/2 Disk (Drive 3)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "3 1/2 Disk (Drive 4)"
+msgstr ""
+
 #. TRANSLATION: libretro/mess, mame/wasm4
 msgctxt "game_options"
 msgid "Emerson Arcadia 2001 cartridges"
@@ -2469,7 +2524,7 @@ msgctxt "game_options"
 msgid "Acorn Archimedes ROM images"
 msgstr ""
 
-#. TRANSLATION: libretro/mess, libretro/mess, mame/wasm4, mame/wasm4
+#. TRANSLATION: libretro/mess, libretro/mess, libretro/mess, libretro/mess, mame/wasm4, ...
 msgctxt "game_options"
 msgid "Select model to emulate"
 msgstr ""
@@ -2521,17 +2576,37 @@ msgstr ""
 
 #. TRANSLATION: libretro/mess, libretro/mess, libretro/mess, libretro/mess, libretro/mess, ...
 msgctxt "game_options"
-msgid "Cassette"
-msgstr "Cassette"
-
-#. TRANSLATION: libretro/mess, libretro/mess, libretro/mess, libretro/mess, libretro/mess, ...
-msgctxt "game_options"
 msgid "Cartridge"
 msgstr "Cartridge"
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess, mame/wasm4, mame/wasm4
 msgctxt "game_options"
 msgid "Quickload"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC MODEL"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro Model B (Default)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Master 128"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Master 512"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Master Compact"
 msgstr ""
 
 #. TRANSLATION: libretro/mess, mame/wasm4
@@ -2559,27 +2634,72 @@ msgctxt "game_options"
 msgid "Acorn BBC Micro Model B Original disks"
 msgstr ""
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess
 msgctxt "game_options"
-msgid "ROM (Slot 1)"
-msgstr "ROM (Slot 1)"
+msgid "Acorn BBC Master cartridges"
+msgstr ""
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess
 msgctxt "game_options"
-msgid "ROM (Slot 2)"
-msgstr "ROM (Slot 2)"
+msgid "Acorn BBC Master disks"
+msgstr ""
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess
 msgctxt "game_options"
-msgid "ROM (Slot 3)"
-msgstr "ROM (Slot 3)"
+msgid "Acorn BBC Master Compact disks"
+msgstr ""
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess
 msgctxt "game_options"
-msgid "ROM (Slot 4)"
-msgstr "ROM (Slot 4)"
+msgid "Olivetti Prodest PC 128S disks (BBC Master Compact)"
+msgstr ""
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro/Master Cassette"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro/Master ROM (Slot 1)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro ROM (Slot 2)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro ROM (Slot 3)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro ROM (Slot 4)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro/Master Disk (Drive 1)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro/Master Disk (Drive 2)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Master Cartridge (Slot 1)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Master Cartridge (Slot 2)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, libretro/mess, mame/wasm4, mame/wasm4
 msgctxt "game_options"
 msgid "CUSTOM CONFIG"
 msgstr "AANGEPASTE CONFIG"
@@ -2718,6 +2838,78 @@ msgstr ""
 msgctxt "game_options"
 msgid "FM-7 MODEL"
 msgstr "FM-7 MODEL"
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "FM TOWNS MODEL"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "FM Towns Marty (Default)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "FM Towns (Model 1/2)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "FM Towns II UX"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid ""
+"Insert a disk into the floppy drive, a blank will be used if one doesn't "
+"exist"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "ADD USER DISK"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Fujitsu FM Towns CD-ROMs"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Fujitsu FM Towns cracked floppy disk images"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Fujitsu FM Towns miscellaneous floppy disk images"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Fujitsu FM Towns original floppy disk images"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Floppy Disk (Drive 1)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Floppy Disk (Drive 2 - Model 1/2 & II UX)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "CD-ROM"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Hard Drive (II UX)"
+msgstr ""
 
 #. TRANSLATION: libretro/mess, mame/wasm4
 msgctxt "game_options"
@@ -5845,6 +6037,16 @@ msgstr "NIEUWE 3DS MODUS"
 
 #. TRANSLATION: daphne
 msgctxt "game_options"
+msgid "Choose your graphics rendering"
+msgstr "Kies uw graphics rendering"
+
+#. TRANSLATION: daphne
+msgctxt "game_options"
+msgid "GRAPHICS BACKEND"
+msgstr "GRAPHICS BACKEND"
+
+#. TRANSLATION: daphne
+msgctxt "game_options"
 msgid "Not all games support Stretch, depending on the video files."
 msgstr ""
 
@@ -5858,15 +6060,25 @@ msgctxt "game_options"
 msgid "Stretch"
 msgstr "Strek"
 
-#. TRANSLATION: daphne
+#. TRANSLATION: daphne, dolphin, dolphin_triforce
 msgctxt "game_options"
-msgid "Choose your graphics rendering"
-msgstr "Kies uw graphics rendering"
+msgid "Force 4:3"
+msgstr "Forceer 4:3"
+
+#. TRANSLATION: daphne, melonds
+msgctxt "game_options"
+msgid "Rotate the screen with the emulator."
+msgstr ""
+
+#. TRANSLATION: daphne, melonds
+msgctxt "game_options"
+msgid "SCREEN ROTATION"
+msgstr ""
 
 #. TRANSLATION: daphne
 msgctxt "game_options"
-msgid "GRAPHICS BACKEND"
-msgstr "GRAPHICS BACKEND"
+msgid "0 degrees"
+msgstr ""
 
 #. TRANSLATION: daphne
 msgctxt "game_options"
@@ -5907,6 +6119,16 @@ msgstr "Keer joystick invoer om in vlieg spellen."
 msgctxt "game_options"
 msgid "INVERT AXIS"
 msgstr "AXIS OMKEREN"
+
+#. TRANSLATION: daphne
+msgctxt "game_options"
+msgid "Adjust Singe joystick sensitivity."
+msgstr ""
+
+#. TRANSLATION: daphne
+msgctxt "game_options"
+msgid "JOYSTICK SENSITIVITY"
+msgstr ""
 
 #. TRANSLATION: dolphin/wasm4
 msgctxt "game_options"
@@ -5993,11 +6215,6 @@ msgstr ""
 msgctxt "game_options"
 msgid "Force 16:9"
 msgstr "Forceer 16:9"
-
-#. TRANSLATION: dolphin, dolphin_triforce
-msgctxt "game_options"
-msgid "Force 4:3"
-msgstr "Forceer 4:3"
 
 #. TRANSLATION: dolphin, dolphin_triforce
 msgctxt "game_options"
@@ -6773,16 +6990,6 @@ msgstr ""
 #. TRANSLATION: melonds
 msgctxt "game_options"
 msgid "ENABLE POLYGON SPLITTING"
-msgstr ""
-
-#. TRANSLATION: melonds
-msgctxt "game_options"
-msgid "Rotate the screen with the emulator."
-msgstr ""
-
-#. TRANSLATION: melonds
-msgctxt "game_options"
-msgid "SCREEN ROTATION"
 msgstr ""
 
 #. TRANSLATION: melonds
@@ -7976,6 +8183,36 @@ msgstr "FORCEER 386DX CPU"
 
 #. TRANSLATION: mame/wasm4
 msgctxt "game_options"
+msgid "ROM (Slot 1)"
+msgstr "ROM (Slot 1)"
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "ROM (Slot 2)"
+msgstr "ROM (Slot 2)"
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "ROM (Slot 3)"
+msgstr "ROM (Slot 3)"
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "ROM (Slot 4)"
+msgstr "ROM (Slot 4)"
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "Mount a floppy for user data, creates if needed"
+msgstr ""
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "USER DISK"
+msgstr ""
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
 msgid "Mac IIx (2Mb RAM, Color, 2 HD Floppies/CD/HDD, Image Reader)"
 msgstr ""
 
@@ -7987,6 +8224,11 @@ msgstr ""
 #. TRANSLATION: mame/wasm4
 msgctxt "game_options"
 msgid "Disk Image"
+msgstr ""
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "Interton VC 4000 cartridges"
 msgstr ""
 
 #. TRANSLATION: mame/wasm4
