--- a/package/batocera/emulationstation/batocera-es-system/locales/pl/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/pl/batocera-es-system.po
@@ -620,7 +620,7 @@ msgctxt "game_options"
 msgid "DISPLAY ROTATION"
 msgstr "OBRÓT EKRANU"
 
-#. TRANSLATION: libretro/mesen, melonds
+#. TRANSLATION: libretro/mesen, daphne, melonds
 msgctxt "game_options"
 msgid "90 degrees"
 msgstr "90 stopni"
@@ -630,7 +630,7 @@ msgctxt "game_options"
 msgid "180 degrees"
 msgstr "180 stopni"
 
-#. TRANSLATION: libretro/mesen, melonds
+#. TRANSLATION: libretro/mesen, daphne, melonds
 msgctxt "game_options"
 msgid "270 degrees"
 msgstr "270 stopni"
@@ -2333,7 +2333,7 @@ msgctxt "game_options"
 msgid "ALT DPAD MODE"
 msgstr "TRYB ALT DPAD"
 
-#. TRANSLATION: libretro/mame, libretro/mess, libretro/mamevirtual, libretro/mamevirtual, cemu, ...
+#. TRANSLATION: libretro/mame, libretro/mess, libretro/mess, libretro/mamevirtual, libretro/mamevirtual, ...
 msgctxt "game_options"
 msgid "Off (Default)"
 msgstr "Wyłączone (Domyślnie)"
@@ -2474,6 +2474,61 @@ msgctxt "game_options"
 msgid "APF M-1000 cartridges"
 msgstr "Wkłady APF M-1000"
 
+#. TRANSLATION: libretro/mess, libretro/mess, mame/wasm4, mame/wasm4
+msgctxt "game_options"
+msgid "Apple II cleanly cracked disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, libretro/mess, mame/wasm4, mame/wasm4
+msgctxt "game_options"
+msgid "Apple II miscellaneous disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, libretro/mess, mame/wasm4, mame/wasm4
+msgctxt "game_options"
+msgid "Apple II original disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, libretro/mess, libretro/mess, libretro/mess, libretro/mess, ...
+msgctxt "game_options"
+msgid "Cassette"
+msgstr "Kaseta"
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Apple IIgs cleanly cracked disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Apple IIgs miscellaneous disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Apple IIgs original disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "5 1/4 Disk (Drive 1)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "5 1/4 Disk (Drive 2)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "3 1/2 Disk (Drive 3)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "3 1/2 Disk (Drive 4)"
+msgstr ""
+
 #. TRANSLATION: libretro/mess, mame/wasm4
 msgctxt "game_options"
 msgid "Emerson Arcadia 2001 cartridges"
@@ -2494,7 +2549,7 @@ msgctxt "game_options"
 msgid "Acorn Archimedes ROM images"
 msgstr "Obrazy Acorn Archimedes ROM"
 
-#. TRANSLATION: libretro/mess, libretro/mess, mame/wasm4, mame/wasm4
+#. TRANSLATION: libretro/mess, libretro/mess, libretro/mess, libretro/mess, mame/wasm4, ...
 msgctxt "game_options"
 msgid "Select model to emulate"
 msgstr "Wybierz model do emulacji"
@@ -2546,18 +2601,38 @@ msgstr "ROMy Acorn Atom Utility"
 
 #. TRANSLATION: libretro/mess, libretro/mess, libretro/mess, libretro/mess, libretro/mess, ...
 msgctxt "game_options"
-msgid "Cassette"
-msgstr "Kaseta"
-
-#. TRANSLATION: libretro/mess, libretro/mess, libretro/mess, libretro/mess, libretro/mess, ...
-msgctxt "game_options"
 msgid "Cartridge"
 msgstr "Kartridż"
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess, mame/wasm4, mame/wasm4
 msgctxt "game_options"
 msgid "Quickload"
 msgstr "Szybkie ładowanie"
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC MODEL"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro Model B (Default)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Master 128"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Master 512"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Master Compact"
+msgstr ""
 
 #. TRANSLATION: libretro/mess, mame/wasm4
 msgctxt "game_options"
@@ -2584,27 +2659,72 @@ msgctxt "game_options"
 msgid "Acorn BBC Micro Model B Original disks"
 msgstr "Oryginalne dyski Acorn BBC Micro Model B"
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess
 msgctxt "game_options"
-msgid "ROM (Slot 1)"
-msgstr "ROM (Gniazdo 1)"
+msgid "Acorn BBC Master cartridges"
+msgstr ""
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess
 msgctxt "game_options"
-msgid "ROM (Slot 2)"
-msgstr "ROM (Gniazdo 2)"
+msgid "Acorn BBC Master disks"
+msgstr ""
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess
 msgctxt "game_options"
-msgid "ROM (Slot 3)"
-msgstr "ROM (Gniazdo 3)"
+msgid "Acorn BBC Master Compact disks"
+msgstr ""
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess
 msgctxt "game_options"
-msgid "ROM (Slot 4)"
-msgstr "ROM (Gniazdo 4)"
+msgid "Olivetti Prodest PC 128S disks (BBC Master Compact)"
+msgstr ""
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro/Master Cassette"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro/Master ROM (Slot 1)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro ROM (Slot 2)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro ROM (Slot 3)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro ROM (Slot 4)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro/Master Disk (Drive 1)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro/Master Disk (Drive 2)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Master Cartridge (Slot 1)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Master Cartridge (Slot 2)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, libretro/mess, mame/wasm4, mame/wasm4
 msgctxt "game_options"
 msgid "CUSTOM CONFIG"
 msgstr "KONFIGURACJA WŁASNA"
@@ -2743,6 +2863,78 @@ msgstr "Obrazy dysków Fujitsu FM-7"
 msgctxt "game_options"
 msgid "FM-7 MODEL"
 msgstr "MODEL FM-7"
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "FM TOWNS MODEL"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "FM Towns Marty (Default)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "FM Towns (Model 1/2)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "FM Towns II UX"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid ""
+"Insert a disk into the floppy drive, a blank will be used if one doesn't "
+"exist"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "ADD USER DISK"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Fujitsu FM Towns CD-ROMs"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Fujitsu FM Towns cracked floppy disk images"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Fujitsu FM Towns miscellaneous floppy disk images"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Fujitsu FM Towns original floppy disk images"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Floppy Disk (Drive 1)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Floppy Disk (Drive 2 - Model 1/2 & II UX)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "CD-ROM"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Hard Drive (II UX)"
+msgstr ""
 
 #. TRANSLATION: libretro/mess, mame/wasm4
 msgctxt "game_options"
@@ -5885,6 +6077,16 @@ msgstr "NOWY TRYB 3DS"
 
 #. TRANSLATION: daphne
 msgctxt "game_options"
+msgid "Choose your graphics rendering"
+msgstr "Wybierz renderowanie grafiki"
+
+#. TRANSLATION: daphne
+msgctxt "game_options"
+msgid "GRAPHICS BACKEND"
+msgstr "BACKEND GRAFICZNY"
+
+#. TRANSLATION: daphne
+msgctxt "game_options"
 msgid "Not all games support Stretch, depending on the video files."
 msgstr "Nie wszystkie gry obsługują rozciąganie, w zależności od plików wideo."
 
@@ -5898,15 +6100,25 @@ msgctxt "game_options"
 msgid "Stretch"
 msgstr "Rozciągnięcie"
 
-#. TRANSLATION: daphne
+#. TRANSLATION: daphne, dolphin, dolphin_triforce
 msgctxt "game_options"
-msgid "Choose your graphics rendering"
-msgstr "Wybierz renderowanie grafiki"
+msgid "Force 4:3"
+msgstr "Wymuszone 4:3"
+
+#. TRANSLATION: daphne, melonds
+msgctxt "game_options"
+msgid "Rotate the screen with the emulator."
+msgstr ""
+
+#. TRANSLATION: daphne, melonds
+msgctxt "game_options"
+msgid "SCREEN ROTATION"
+msgstr ""
 
 #. TRANSLATION: daphne
 msgctxt "game_options"
-msgid "GRAPHICS BACKEND"
-msgstr "BACKEND GRAFICZNY"
+msgid "0 degrees"
+msgstr ""
 
 #. TRANSLATION: daphne
 msgctxt "game_options"
@@ -5947,6 +6159,16 @@ msgstr "Odwróć joystick w grach lotniczych."
 msgctxt "game_options"
 msgid "INVERT AXIS"
 msgstr "ODWRÓĆ OŚ"
+
+#. TRANSLATION: daphne
+msgctxt "game_options"
+msgid "Adjust Singe joystick sensitivity."
+msgstr ""
+
+#. TRANSLATION: daphne
+msgctxt "game_options"
+msgid "JOYSTICK SENSITIVITY"
+msgstr ""
 
 #. TRANSLATION: dolphin/wasm4
 msgctxt "game_options"
@@ -6031,11 +6253,6 @@ msgstr ""
 msgctxt "game_options"
 msgid "Force 16:9"
 msgstr "Wymuszone 16:9"
-
-#. TRANSLATION: dolphin, dolphin_triforce
-msgctxt "game_options"
-msgid "Force 4:3"
-msgstr "Wymuszone 4:3"
 
 #. TRANSLATION: dolphin, dolphin_triforce
 msgctxt "game_options"
@@ -6811,16 +7028,6 @@ msgstr ""
 #. TRANSLATION: melonds
 msgctxt "game_options"
 msgid "ENABLE POLYGON SPLITTING"
-msgstr ""
-
-#. TRANSLATION: melonds
-msgctxt "game_options"
-msgid "Rotate the screen with the emulator."
-msgstr ""
-
-#. TRANSLATION: melonds
-msgctxt "game_options"
-msgid "SCREEN ROTATION"
 msgstr ""
 
 #. TRANSLATION: melonds
@@ -8021,6 +8228,36 @@ msgstr ""
 
 #. TRANSLATION: mame/wasm4
 msgctxt "game_options"
+msgid "ROM (Slot 1)"
+msgstr "ROM (Gniazdo 1)"
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "ROM (Slot 2)"
+msgstr "ROM (Gniazdo 2)"
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "ROM (Slot 3)"
+msgstr "ROM (Gniazdo 3)"
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "ROM (Slot 4)"
+msgstr "ROM (Gniazdo 4)"
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "Mount a floppy for user data, creates if needed"
+msgstr ""
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "USER DISK"
+msgstr ""
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
 msgid "Mac IIx (2Mb RAM, Color, 2 HD Floppies/CD/HDD, Image Reader)"
 msgstr "Mac IIx (2Mb RAM, Color, 2 dyskietki HD/CD/HDD/czytnik obrazu)"
 
@@ -8035,6 +8272,11 @@ msgstr ""
 msgctxt "game_options"
 msgid "Disk Image"
 msgstr "Obraz dysku"
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "Interton VC 4000 cartridges"
+msgstr ""
 
 #. TRANSLATION: mame/wasm4
 msgctxt "game_options"
