--- a/package/batocera/emulationstation/batocera-es-system/locales/pt_BR/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/pt_BR/batocera-es-system.po
@@ -620,7 +620,7 @@ msgctxt "game_options"
 msgid "DISPLAY ROTATION"
 msgstr "ROTAÇÃO DE TELA"
 
-#. TRANSLATION: libretro/mesen, melonds
+#. TRANSLATION: libretro/mesen, daphne, melonds
 msgctxt "game_options"
 msgid "90 degrees"
 msgstr "90 graus"
@@ -630,7 +630,7 @@ msgctxt "game_options"
 msgid "180 degrees"
 msgstr "180 graus"
 
-#. TRANSLATION: libretro/mesen, melonds
+#. TRANSLATION: libretro/mesen, daphne, melonds
 msgctxt "game_options"
 msgid "270 degrees"
 msgstr "270 graus"
@@ -2334,7 +2334,7 @@ msgctxt "game_options"
 msgid "ALT DPAD MODE"
 msgstr "MODO CONTROLE DIRECIONAL ALTERNATIVO"
 
-#. TRANSLATION: libretro/mame, libretro/mess, libretro/mamevirtual, libretro/mamevirtual, cemu, ...
+#. TRANSLATION: libretro/mame, libretro/mess, libretro/mess, libretro/mamevirtual, libretro/mamevirtual, ...
 msgctxt "game_options"
 msgid "Off (Default)"
 msgstr "Desativado (Padrão)"
@@ -2476,6 +2476,61 @@ msgctxt "game_options"
 msgid "APF M-1000 cartridges"
 msgstr "Cartuchos APF M-1000"
 
+#. TRANSLATION: libretro/mess, libretro/mess, mame/wasm4, mame/wasm4
+msgctxt "game_options"
+msgid "Apple II cleanly cracked disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, libretro/mess, mame/wasm4, mame/wasm4
+msgctxt "game_options"
+msgid "Apple II miscellaneous disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, libretro/mess, mame/wasm4, mame/wasm4
+msgctxt "game_options"
+msgid "Apple II original disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, libretro/mess, libretro/mess, libretro/mess, libretro/mess, ...
+msgctxt "game_options"
+msgid "Cassette"
+msgstr "Cassete"
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Apple IIgs cleanly cracked disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Apple IIgs miscellaneous disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Apple IIgs original disks"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "5 1/4 Disk (Drive 1)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "5 1/4 Disk (Drive 2)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "3 1/2 Disk (Drive 3)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "3 1/2 Disk (Drive 4)"
+msgstr ""
+
 #. TRANSLATION: libretro/mess, mame/wasm4
 msgctxt "game_options"
 msgid "Emerson Arcadia 2001 cartridges"
@@ -2496,7 +2551,7 @@ msgctxt "game_options"
 msgid "Acorn Archimedes ROM images"
 msgstr "Imagens ROM Acorn Archimedes"
 
-#. TRANSLATION: libretro/mess, libretro/mess, mame/wasm4, mame/wasm4
+#. TRANSLATION: libretro/mess, libretro/mess, libretro/mess, libretro/mess, mame/wasm4, ...
 msgctxt "game_options"
 msgid "Select model to emulate"
 msgstr "Selecione o modelo para emular"
@@ -2548,18 +2603,38 @@ msgstr "ROMs do utilitário Acorn Atom"
 
 #. TRANSLATION: libretro/mess, libretro/mess, libretro/mess, libretro/mess, libretro/mess, ...
 msgctxt "game_options"
-msgid "Cassette"
-msgstr "Cassete"
-
-#. TRANSLATION: libretro/mess, libretro/mess, libretro/mess, libretro/mess, libretro/mess, ...
-msgctxt "game_options"
 msgid "Cartridge"
 msgstr "Cartucho"
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess, mame/wasm4, mame/wasm4
 msgctxt "game_options"
 msgid "Quickload"
 msgstr "Carregamento rápido"
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC MODEL"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro Model B (Default)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Master 128"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Master 512"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Master Compact"
+msgstr ""
 
 #. TRANSLATION: libretro/mess, mame/wasm4
 msgctxt "game_options"
@@ -2586,27 +2661,72 @@ msgctxt "game_options"
 msgid "Acorn BBC Micro Model B Original disks"
 msgstr "Discos originais Acorn BBC Micro Model B"
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess
 msgctxt "game_options"
-msgid "ROM (Slot 1)"
-msgstr "ROM (Espaço 1)"
+msgid "Acorn BBC Master cartridges"
+msgstr ""
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess
 msgctxt "game_options"
-msgid "ROM (Slot 2)"
-msgstr "ROM (Espaço 2)"
+msgid "Acorn BBC Master disks"
+msgstr ""
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess
 msgctxt "game_options"
-msgid "ROM (Slot 3)"
-msgstr "ROM (Espaço 3)"
+msgid "Acorn BBC Master Compact disks"
+msgstr ""
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess
 msgctxt "game_options"
-msgid "ROM (Slot 4)"
-msgstr "ROM (Espaço 4)"
+msgid "Olivetti Prodest PC 128S disks (BBC Master Compact)"
+msgstr ""
 
-#. TRANSLATION: libretro/mess, mame/wasm4
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro/Master Cassette"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro/Master ROM (Slot 1)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro ROM (Slot 2)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro ROM (Slot 3)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro ROM (Slot 4)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro/Master Disk (Drive 1)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Micro/Master Disk (Drive 2)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Master Cartridge (Slot 1)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess
+msgctxt "game_options"
+msgid "BBC Master Cartridge (Slot 2)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, libretro/mess, mame/wasm4, mame/wasm4
 msgctxt "game_options"
 msgid "CUSTOM CONFIG"
 msgstr "CONFIGURAÇÃO PERSONALIZADA"
@@ -2745,6 +2865,78 @@ msgstr "Imagens de disco Fujitsu FM-7"
 msgctxt "game_options"
 msgid "FM-7 MODEL"
 msgstr "MODELO FM-7"
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "FM TOWNS MODEL"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "FM Towns Marty (Default)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "FM Towns (Model 1/2)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "FM Towns II UX"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid ""
+"Insert a disk into the floppy drive, a blank will be used if one doesn't "
+"exist"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "ADD USER DISK"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Fujitsu FM Towns CD-ROMs"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Fujitsu FM Towns cracked floppy disk images"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Fujitsu FM Towns miscellaneous floppy disk images"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Fujitsu FM Towns original floppy disk images"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Floppy Disk (Drive 1)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Floppy Disk (Drive 2 - Model 1/2 & II UX)"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "CD-ROM"
+msgstr ""
+
+#. TRANSLATION: libretro/mess, mame/wasm4
+msgctxt "game_options"
+msgid "Hard Drive (II UX)"
+msgstr ""
 
 #. TRANSLATION: libretro/mess, mame/wasm4
 msgctxt "game_options"
@@ -5887,6 +6079,16 @@ msgstr "MODO NEW 3DS"
 
 #. TRANSLATION: daphne
 msgctxt "game_options"
+msgid "Choose your graphics rendering"
+msgstr "Escolha sua renderização gráfica"
+
+#. TRANSLATION: daphne
+msgctxt "game_options"
+msgid "GRAPHICS BACKEND"
+msgstr "PROCESSO INTERNO GRÁFICO"
+
+#. TRANSLATION: daphne
+msgctxt "game_options"
 msgid "Not all games support Stretch, depending on the video files."
 msgstr ""
 "Nem todos os jogos suportam a proporção Esticado, dependem dos arquivos de "
@@ -5902,15 +6104,25 @@ msgctxt "game_options"
 msgid "Stretch"
 msgstr "Esticado"
 
-#. TRANSLATION: daphne
+#. TRANSLATION: daphne, dolphin, dolphin_triforce
 msgctxt "game_options"
-msgid "Choose your graphics rendering"
-msgstr "Escolha sua renderização gráfica"
+msgid "Force 4:3"
+msgstr "Forçar 4:3"
+
+#. TRANSLATION: daphne, melonds
+msgctxt "game_options"
+msgid "Rotate the screen with the emulator."
+msgstr "Gire a tela com o emulador."
+
+#. TRANSLATION: daphne, melonds
+msgctxt "game_options"
+msgid "SCREEN ROTATION"
+msgstr "ROTAÇÃO DA TELA"
 
 #. TRANSLATION: daphne
 msgctxt "game_options"
-msgid "GRAPHICS BACKEND"
-msgstr "PROCESSO INTERNO GRÁFICO"
+msgid "0 degrees"
+msgstr ""
 
 #. TRANSLATION: daphne
 msgctxt "game_options"
@@ -5951,6 +6163,16 @@ msgstr "Inverter controles em jogos de vôo."
 msgctxt "game_options"
 msgid "INVERT AXIS"
 msgstr "INVERTER EIXOS"
+
+#. TRANSLATION: daphne
+msgctxt "game_options"
+msgid "Adjust Singe joystick sensitivity."
+msgstr ""
+
+#. TRANSLATION: daphne
+msgctxt "game_options"
+msgid "JOYSTICK SENSITIVITY"
+msgstr ""
 
 #. TRANSLATION: dolphin/wasm4
 msgctxt "game_options"
@@ -6036,11 +6258,6 @@ msgstr ""
 msgctxt "game_options"
 msgid "Force 16:9"
 msgstr "Forçar 16:9"
-
-#. TRANSLATION: dolphin, dolphin_triforce
-msgctxt "game_options"
-msgid "Force 4:3"
-msgstr "Forçar 4:3"
 
 #. TRANSLATION: dolphin, dolphin_triforce
 msgctxt "game_options"
@@ -6823,16 +7040,6 @@ msgstr "Ativa a divisão de polígonos aprimorada."
 msgctxt "game_options"
 msgid "ENABLE POLYGON SPLITTING"
 msgstr "ATIVAR A DIVISÃO DE POLÍGONOS"
-
-#. TRANSLATION: melonds
-msgctxt "game_options"
-msgid "Rotate the screen with the emulator."
-msgstr "Gire a tela com o emulador."
-
-#. TRANSLATION: melonds
-msgctxt "game_options"
-msgid "SCREEN ROTATION"
-msgstr "ROTAÇÃO DA TELA"
 
 #. TRANSLATION: melonds
 msgctxt "game_options"
@@ -8042,6 +8249,36 @@ msgstr "FORÇAR PROCESSADOR 386DX"
 
 #. TRANSLATION: mame/wasm4
 msgctxt "game_options"
+msgid "ROM (Slot 1)"
+msgstr "ROM (Espaço 1)"
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "ROM (Slot 2)"
+msgstr "ROM (Espaço 2)"
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "ROM (Slot 3)"
+msgstr "ROM (Espaço 3)"
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "ROM (Slot 4)"
+msgstr "ROM (Espaço 4)"
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "Mount a floppy for user data, creates if needed"
+msgstr ""
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "USER DISK"
+msgstr ""
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
 msgid "Mac IIx (2Mb RAM, Color, 2 HD Floppies/CD/HDD, Image Reader)"
 msgstr ""
 "Mac IIx (2 MB de RAM, Colorido, 2 Disquetes HD/CD/HDD, Leitor de imagens)"
@@ -8057,6 +8294,11 @@ msgstr ""
 msgctxt "game_options"
 msgid "Disk Image"
 msgstr "Imagem do Disco"
+
+#. TRANSLATION: mame/wasm4
+msgctxt "game_options"
+msgid "Interton VC 4000 cartridges"
+msgstr ""
 
 #. TRANSLATION: mame/wasm4
 msgctxt "game_options"
