--- a/package/batocera/emulationstation/batocera-es-system/locales/batocera-es-system.pot
+++ b/package/batocera/emulationstation/batocera-es-system/locales/batocera-es-system.pot
@@ -6014,26 +6014,6 @@ msgctxt "game_options"
 msgid "GRAPHICS BACKEND"
 msgstr ""
 
-#. TRANSLATION: daphne
-msgctxt "game_options"
-msgid "Not all games support Stretch, depending on the video files."
-msgstr ""
-
-#. TRANSLATION: daphne, awgl, awgl
-msgctxt "game_options"
-msgid "Original"
-msgstr ""
-
-#. TRANSLATION: daphne, openbor, pcsx2, redream, demul
-msgctxt "game_options"
-msgid "Stretch"
-msgstr ""
-
-#. TRANSLATION: daphne, dolphin, dolphin_triforce
-msgctxt "game_options"
-msgid "Force 4:3"
-msgstr ""
-
 #. TRANSLATION: daphne, melonds
 msgctxt "game_options"
 msgid "Rotate the screen with the emulator."
@@ -6178,6 +6158,11 @@ msgstr ""
 #. TRANSLATION: dolphin, dolphin_triforce
 msgctxt "game_options"
 msgid "Force 16:9"
+msgstr ""
+
+#. TRANSLATION: dolphin, dolphin_triforce
+msgctxt "game_options"
+msgid "Force 4:3"
 msgstr ""
 
 #. TRANSLATION: dolphin, dolphin_triforce
@@ -7292,6 +7277,11 @@ msgstr ""
 #. TRANSLATION: openbor
 msgctxt "game_options"
 msgid "Stretch games to full-screen, but may distort the aspect ratio"
+msgstr ""
+
+#. TRANSLATION: openbor, pcsx2, redream, demul
+msgctxt "game_options"
+msgid "Stretch"
 msgstr ""
 
 #. TRANSLATION: openbor
@@ -8776,6 +8766,11 @@ msgstr ""
 #. TRANSLATION: awgl
 msgctxt "game_options"
 msgid "Select rendering mode."
+msgstr ""
+
+#. TRANSLATION: awgl, awgl
+msgctxt "game_options"
+msgid "Original"
 msgstr ""
 
 #. TRANSLATION: awgl
