--- a/package/batocera/emulationstation/batocera-es-system/locales/fr/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/fr/batocera-es-system.po
@@ -6075,28 +6075,6 @@ msgctxt "game_options"
 msgid "GRAPHICS BACKEND"
 msgstr "SUPPORT GRAPHIQUE"
 
-#. TRANSLATION: daphne
-msgctxt "game_options"
-msgid "Not all games support Stretch, depending on the video files."
-msgstr ""
-"Tous les jeux ne prennent pas en charge l'étirement, selon les fichiers "
-"vidéo."
-
-#. TRANSLATION: daphne, awgl, awgl
-msgctxt "game_options"
-msgid "Original"
-msgstr "Original"
-
-#. TRANSLATION: daphne, openbor, pcsx2, redream, demul
-msgctxt "game_options"
-msgid "Stretch"
-msgstr "Étirement"
-
-#. TRANSLATION: daphne, dolphin, dolphin_triforce
-msgctxt "game_options"
-msgid "Force 4:3"
-msgstr "Force 4:3"
-
 #. TRANSLATION: daphne, melonds
 msgctxt "game_options"
 msgid "Rotate the screen with the emulator."
@@ -6246,6 +6224,11 @@ msgstr ""
 msgctxt "game_options"
 msgid "Force 16:9"
 msgstr "Force 16:9"
+
+#. TRANSLATION: dolphin, dolphin_triforce
+msgctxt "game_options"
+msgid "Force 4:3"
+msgstr "Force 4:3"
 
 #. TRANSLATION: dolphin, dolphin_triforce
 msgctxt "game_options"
@@ -7374,6 +7357,11 @@ msgid "Stretch games to full-screen, but may distort the aspect ratio"
 msgstr ""
 "Étendre les jeux en plein écran, mais peut déformer le rapport hauteur/"
 "largeur"
+
+#. TRANSLATION: openbor, pcsx2, redream, demul
+msgctxt "game_options"
+msgid "Stretch"
+msgstr "Étirement"
 
 #. TRANSLATION: openbor
 msgctxt "game_options"
@@ -8919,6 +8907,11 @@ msgctxt "game_options"
 msgid "Select rendering mode."
 msgstr ""
 
+#. TRANSLATION: awgl, awgl
+msgctxt "game_options"
+msgid "Original"
+msgstr "Original"
+
 #. TRANSLATION: awgl
 msgctxt "game_options"
 msgid "Select fullscreen mode."
@@ -8963,6 +8956,12 @@ msgstr ""
 msgctxt "game_options"
 msgid "EGA GRAPHICS MODE"
 msgstr ""
+
+#~ msgctxt "game_options"
+#~ msgid "Not all games support Stretch, depending on the video files."
+#~ msgstr ""
+#~ "Tous les jeux ne prennent pas en charge l'étirement, selon les fichiers "
+#~ "vidéo."
 
 #~ msgctxt "game_options"
 #~ msgid ""
